; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_rebase.c_rebase_state_type.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_rebase.c_rebase_state_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@GIT_BUF_INIT = common dso_local global i32 0, align 4
@GIT_REBASE_TYPE_NONE = common dso_local global i64 0, align 8
@REBASE_APPLY_DIR = common dso_local global i32 0, align 4
@GIT_REBASE_TYPE_APPLY = common dso_local global i64 0, align 8
@REBASE_MERGE_DIR = common dso_local global i32 0, align 4
@GIT_REBASE_TYPE_MERGE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64*, i8**, %struct.TYPE_3__*)* @rebase_state_type to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rebase_state_type(i64* %0, i8** %1, %struct.TYPE_3__* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i64*, align 8
  %6 = alloca i8**, align 8
  %7 = alloca %struct.TYPE_3__*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  store i64* %0, i64** %5, align 8
  store i8** %1, i8*** %6, align 8
  store %struct.TYPE_3__* %2, %struct.TYPE_3__** %7, align 8
  %10 = load i32, i32* @GIT_BUF_INIT, align 4
  store i32 %10, i32* %8, align 4
  %11 = load i64, i64* @GIT_REBASE_TYPE_NONE, align 8
  store i64 %11, i64* %9, align 8
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load i32, i32* @REBASE_APPLY_DIR, align 4
  %16 = call i64 @git_buf_joinpath(i32* %8, i32 %14, i32 %15)
  %17 = icmp slt i64 %16, 0
  br i1 %17, label %18, label %19

18:                                               ; preds = %3
  store i32 -1, i32* %4, align 4
  br label %55

19:                                               ; preds = %3
  %20 = call i32 @git_buf_cstr(i32* %8)
  %21 = call i64 @git_path_isdir(i32 %20)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %25

23:                                               ; preds = %19
  %24 = load i64, i64* @GIT_REBASE_TYPE_APPLY, align 8
  store i64 %24, i64* %9, align 8
  br label %41

25:                                               ; preds = %19
  %26 = call i32 @git_buf_clear(i32* %8)
  %27 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %28 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = load i32, i32* @REBASE_MERGE_DIR, align 4
  %31 = call i64 @git_buf_joinpath(i32* %8, i32 %29, i32 %30)
  %32 = icmp slt i64 %31, 0
  br i1 %32, label %33, label %34

33:                                               ; preds = %25
  store i32 -1, i32* %4, align 4
  br label %55

34:                                               ; preds = %25
  %35 = call i32 @git_buf_cstr(i32* %8)
  %36 = call i64 @git_path_isdir(i32 %35)
  %37 = icmp ne i64 %36, 0
  br i1 %37, label %38, label %40

38:                                               ; preds = %34
  %39 = load i64, i64* @GIT_REBASE_TYPE_MERGE, align 8
  store i64 %39, i64* %9, align 8
  br label %41

40:                                               ; preds = %34
  br label %41

41:                                               ; preds = %40, %38, %23
  %42 = load i64, i64* %9, align 8
  %43 = load i64*, i64** %5, align 8
  store i64 %42, i64* %43, align 8
  %44 = load i64, i64* %9, align 8
  %45 = load i64, i64* @GIT_REBASE_TYPE_NONE, align 8
  %46 = icmp ne i64 %44, %45
  br i1 %46, label %47, label %53

47:                                               ; preds = %41
  %48 = load i8**, i8*** %6, align 8
  %49 = icmp ne i8** %48, null
  br i1 %49, label %50, label %53

50:                                               ; preds = %47
  %51 = call i8* @git_buf_detach(i32* %8)
  %52 = load i8**, i8*** %6, align 8
  store i8* %51, i8** %52, align 8
  br label %53

53:                                               ; preds = %50, %47, %41
  %54 = call i32 @git_buf_dispose(i32* %8)
  store i32 0, i32* %4, align 4
  br label %55

55:                                               ; preds = %53, %33, %18
  %56 = load i32, i32* %4, align 4
  ret i32 %56
}

declare dso_local i64 @git_buf_joinpath(i32*, i32, i32) #1

declare dso_local i64 @git_path_isdir(i32) #1

declare dso_local i32 @git_buf_cstr(i32*) #1

declare dso_local i32 @git_buf_clear(i32*) #1

declare dso_local i8* @git_buf_detach(i32*) #1

declare dso_local i32 @git_buf_dispose(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
